[gd_scene load_steps=7 format=2]

[ext_resource path="res://World/Cave/GenerateCave.gd" type="Script" id=1]
[ext_resource path="res://World/Cave/Cave.tres" type="TileSet" id=2]
[ext_resource path="res://Assets/cave_mainLev.png" type="Texture" id=3]

[sub_resource type="TileSet" id=1]
0/name = "cave_mainLev.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 672, 320, 224 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 432, Vector2( 0, 1 ), 54, Vector2( 0, 2 ), 432, Vector2( 0, 3 ), 438, Vector2( 0, 4 ), 438, Vector2( 0, 5 ), 438, Vector2( 0, 6 ), 54, Vector2( 1, 0 ), 216, Vector2( 1, 1 ), 27, Vector2( 1, 2 ), 504, Vector2( 1, 3 ), 511, Vector2( 1, 4 ), 511, Vector2( 1, 5 ), 511, Vector2( 1, 6 ), 63, Vector2( 2, 0 ), 510, Vector2( 2, 1 ), 447, Vector2( 2, 2 ), 504, Vector2( 2, 3 ), 511, Vector2( 2, 4 ), 511, Vector2( 2, 5 ), 511, Vector2( 2, 6 ), 63, Vector2( 3, 0 ), 507, Vector2( 3, 1 ), 255, Vector2( 3, 2 ), 504, Vector2( 3, 3 ), 511, Vector2( 3, 4 ), 511, Vector2( 3, 5 ), 511, Vector2( 3, 6 ), 63, Vector2( 4, 0 ), 255, Vector2( 4, 1 ), 507, Vector2( 4, 2 ), 216, Vector2( 4, 3 ), 219, Vector2( 4, 4 ), 219, Vector2( 4, 5 ), 219, Vector2( 4, 6 ), 27, Vector2( 5, 0 ), 447, Vector2( 5, 1 ), 510, Vector2( 6, 3 ), 511, Vector2( 6, 4 ), 511, Vector2( 6, 5 ), 511, Vector2( 7, 3 ), 511, Vector2( 7, 4 ), 511, Vector2( 7, 5 ), 511, Vector2( 8, 3 ), 511, Vector2( 8, 4 ), 511, Vector2( 8, 5 ), 511 ]
0/autotile/icon_coordinate = Vector2( 8, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=2]
0/name = "cave_mainLev.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 320, 672, 320, 224 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 255, Vector2( 0, 1 ), 507, Vector2( 1, 0 ), 447, Vector2( 1, 1 ), 510, Vector2( 2, 0 ), 27, Vector2( 2, 1 ), 216, Vector2( 3, 0 ), 54, Vector2( 3, 1 ), 432, Vector2( 4, 0 ), 432, Vector2( 4, 1 ), 54, Vector2( 5, 0 ), 216, Vector2( 5, 1 ), 27, Vector2( 5, 2 ), 432, Vector2( 5, 3 ), 438, Vector2( 5, 4 ), 438, Vector2( 5, 5 ), 438, Vector2( 5, 6 ), 54, Vector2( 6, 2 ), 504, Vector2( 6, 3 ), 511, Vector2( 6, 4 ), 511, Vector2( 6, 5 ), 511, Vector2( 6, 6 ), 63, Vector2( 7, 2 ), 504, Vector2( 7, 3 ), 511, Vector2( 7, 4 ), 511, Vector2( 7, 5 ), 511, Vector2( 7, 6 ), 63, Vector2( 8, 2 ), 504, Vector2( 8, 3 ), 511, Vector2( 8, 4 ), 511, Vector2( 8, 5 ), 511, Vector2( 8, 6 ), 63, Vector2( 9, 2 ), 216, Vector2( 9, 3 ), 219, Vector2( 9, 4 ), 219, Vector2( 9, 5 ), 219, Vector2( 9, 6 ), 27 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=3]
0/name = "cave_mainLev.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 416, 0, 64, 96 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="GenerateCave" type="Node2D"]
script = ExtResource( 1 )

[node name="Rooms" type="Node" parent="."]

[node name="RedGroundMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -262131, 0, 8, -262129, 0, 8, -196595, 0, 8, -196592, 0, 8, -131056, 0, 8, -65520, 0, 8, -65515, 0, 8, 22, 0, 8, 23, 0, 8, 24, 0, 8, 25, 0, 8, 26, 0, 8, 65555, 0, 8, 65563, 0, 8, 65564, 0, 8, 131072, 0, 8, 131085, 0, 8, 131088, 0, 8, 131093, 0, 8, 131101, 0, 8, 131102, 0, 8, 262139, 0, 8, 262143, 0, 8, 196621, 0, 8, 196624, 0, 8, 196625, 0, 8, 196631, 0, 8, 196638, 0, 8, 327673, 0, 8, 262147, 0, 8, 262157, 0, 8, 262161, 0, 8, 262162, 0, 8, 262167, 0, 8, 262168, 0, 8, 262169, 0, 8, 262175, 0, 8, 393213, 0, 8, 327695, 0, 8, 327705, 0, 8, 327711, 0, 8, 393232, 0, 8, 393242, 0, 8, 393247, 0, 8, 524281, 0, 8, 524284, 0, 8, 524287, 0, 8, 458767, 0, 8, 458771, 0, 8, 458773, 0, 8, 458778, 0, 8, 458783, 0, 8, 589819, 0, 8, 589822, 0, 8, 524288, 0, 8, 524291, 0, 8, 524304, 0, 8, 524305, 0, 8, 524314, 0, 8, 524319, 0, 8, 655354, 0, 8, 655356, 0, 8, 655359, 0, 8, 589826, 0, 8, 589842, 0, 8, 589845, 0, 8, 589849, 0, 8, 589850, 0, 8, 589855, 0, 8, 720889, 0, 8, 720891, 0, 8, 720895, 0, 8, 655361, 0, 8, 655362, 0, 8, 655379, 0, 8, 655382, 0, 8, 655388, 0, 8, 655389, 0, 8, 655390, 0, 8, 786427, 0, 8, 786430, 0, 8, 720897, 0, 8, 720921, 0, 8, 720922, 0, 8, 720923, 0, 8, 851966, 0, 8, 786432, 0, 8, 786433, 0, 8, 786434, 0, 8, 917501, 0, 8, 851968, 0, 8, 851970, 0, 8, 983037, 0, 8, 983039, 0, 8, 917504, 0, 8, 917505, 0, 8, 917506, 0, 8 )

[node name="CaveWallsMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
cell_tile_origin = 2
cell_y_sort = true
format = 1

[node name="GrassMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 1300, 800 )
current = true
zoom = Vector2( 4, 4 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
